MOD store 생성과 state 사용하기

--- a/main.html
+++ b/main.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 
+<head>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/4.0.5/redux.js"></script>
+</head>
+
 <body>
   <div id="subject"></div>
   <div id="toc"></div>
@@ -16,12 +20,18 @@
       `;
     }
     function TOC() {
+      let state = store.getState();
+      let liTags = '';
+      state.contents.forEach(content => {
+        liTags = liTags + `
+          <li>
+            <a href="${content.id}">${content.title}</a>
+          </li>
+        `;
+      });
       document.querySelector('#toc').innerHTML = `
         <nav>
-          <ol>
-            <li><a href="1.html">HTML</a></li>
-            <li><a href="2.html">CSS</a></li>
-          </ol>
+          <ol>${liTags}</ol>
         </nav>
       `;
     }
@@ -41,7 +51,17 @@
         </article>
       `;
     }
-
+    function reducer(state, action) {
+      if (state === undefined) {
+        return {
+          contents: [
+            { id: 1, title: 'HTML', desc: 'HTML is..' },
+            { id: 2, title: 'CSS', desc: 'CSS is..' }
+          ]
+        }
+      }
+    }
+    let store = Redux.createStore(reducer);
     subject();
     TOC();
     control();
